Tag 546 sende avtale til joark uten kafka (#67)
* TAG-546 Henter og lagrer avtaler for journalføring

* TAG-546 Lagt til noen filer

* TAG-546 Endret sts url

* TAG-546 Debug deployemnt kræsj

* TAG-546 Debug deployemnt 2

* TAG-546 Lagt inn igjen riktig loggkonfig

* TAG-546 Modifisert Internal endepunkt

* TAG-546 Rettet mappingfeil

* TAG-546 Sender fraDato til prosess som LocalDate

* TAG-546 Lar TokenUtils håndtere system-tokens på samme måte som andre tokens