@@ -16,13 +16,13 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
 import static no.nav.security.oidc.test.support.JwtTokenGenerator.createSignedJWT;
 import static no.nav.tag.tiltaksgjennomforing.integrasjon.TokenUtils.Issuer.ISSUER_ISSO;
 import static no.nav.tag.tiltaksgjennomforing.integrasjon.TokenUtils.Issuer.ISSUER_SELVBETJENING;
+import static no.nav.tag.tiltaksgjennomforing.integrasjon.TokenUtils.Issuer.ISSUER_SYSTEM;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
@@ -50,6 +50,12 @@ public class TokenUtilsTest {
     }
 
     @Test
+    public void hentInnloggetBruker__er_system() {
+        vaerInnloggetSystem("systemId");
+        assertThat(tokenUtils.hentBrukerOgIssuer().get()).isEqualTo(new BrukerOgIssuer(Issuer.ISSUER_SYSTEM, "systemId"));
+    }
+
+    @Test
     public void hentInnloggetBruker__er_uinnlogget() {
         vaerUinnlogget();
         assertThat(tokenUtils.hentBrukerOgIssuer().isEmpty()).isTrue();
@@ -59,18 +65,22 @@ public class TokenUtilsTest {
         when(contextHolder.getOIDCValidationContext()).thenReturn(new OIDCValidationContext());
     }
 
+    private void vaerInnloggetSystem(String systemId) {
+        lagOidcContext(ISSUER_SYSTEM, systemId, new HashMap<>());
+    }
+
     private void vaerInnloggetSelvbetjening(InnloggetSelvbetjeningBruker bruker) {
-        lagOidcContext(ISSUER_SELVBETJENING, bruker.getIdentifikator().asString(), new HashMap<>(), "aud-selvbetjening");
+        lagOidcContext(ISSUER_SELVBETJENING, bruker.getIdentifikator().asString(), new HashMap<>());
     }
 
     private void vaerInnloggetNavAnsatt(InnloggetNavAnsatt innloggetBruker) {
-        lagOidcContext(ISSUER_ISSO, "blablabla", Collections.singletonMap("NAVident", innloggetBruker.getIdentifikator().asString()), "aud-isso");
+        lagOidcContext(ISSUER_ISSO, "blablabla", Map.of("NAVident", innloggetBruker.getIdentifikator().asString()));
     }
 
-    private void lagOidcContext(Issuer issuer, String subject, Map<String, Object> claims, String audience) {
+    private void lagOidcContext(Issuer issuer, String subject, Map<String, Object> claims) {
         OIDCValidationContext context = new OIDCValidationContext();
         TokenContext tokenContext = new TokenContext(issuer.issuerName, "");
-        OIDCClaims oidcClaims = new OIDCClaims(createSignedJWT(subject, 0, claims, issuer.issuerName, audience));
+        OIDCClaims oidcClaims = new OIDCClaims(createSignedJWT(subject, 0, claims, issuer.issuerName, "audience"));
         context.addValidatedToken(issuer.issuerName, tokenContext, oidcClaims);
 
         when(contextHolder.getOIDCValidationContext()).thenReturn(context);
